--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <img id = "layer3" src ="assets/layer-3.png" >
     <img id = "layer2" src ="assets/layer-2.png" >
     <img id = "layer1" src ="assets/layer-1.png" >
+    <img id = "enemy_fly" src ="assets/enemy_fly.png" >
+    <img id = "enemy_plant" src ="assets/enemy_plant.png" >
+    <img id = "enemy_spider_big" src ="assets/enemy_spider_big.png" >
     <script type="module" src="main.js"></script>
 </body>
 </html>
