--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript game</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -19,6 +22,7 @@
     <img id = "enemy_spider_big" src ="assets/enemy_spider_big.png" >
     <img id="fire" src="assets/fire.png">
     <img id="collisionAnimation" src="assets/boom.png" >
+    <img id="lives" src="assets/lives.png">
     <script type="module" src="main.js"></script>
 </body>
 </html>
