Added instructions fot eh game ,a swell as title and description ,  styled in css

--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
             </ul>
         </div>
         <div class="canvas-container">
+            <h1 class="game-title">CREATURES OF THE NIGHT</h1>
+            <p class="game-subtitle">
+                Reach <span>50 points</span> in under <span> 35 seconds</span> to win
+            </p>
+            <button class="reset-btn" onclick="location.reload()">
+                RESET THE GAME
+            </button>
             <canvas id="canvas1"></canvas>
         </div>
         <div class="hud right">
