Finished the game , added music which plays on first click or keypress , nda  button for it

--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
+    <button id="musicToggle">MUSIC: OFF</button>
+
+
     <div class="background">
         <div class="mesh"></div>
     </div>
@@ -53,5 +57,6 @@
     <img id="collisionAnimation" src="assets/boom.png" >
     <img id="lives" src="assets/lives.png">
     <script type="module" src="main.js"></script>
+        <audio id="bg-music" src="assets/music.mp3" loop></audio>
 </body>
 </html>
