Lets go I finished with the game , also the musicbutton which also looks good now , and set the music volume to 0,16767676767 676767 of the original

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-    <button id="musicToggle">MUSIC: OFF</button>
+    <button id="musicToggle" class="music-btn">MUSIC: OFF</button>
 
 
     <div class="background">
